<resources>
    <string name="app_name">My Application</string>
    <string name="NOTNETFLIX_TITLE">NOTNETFLIX</string>
    <string name="profile_henry_townsend">Henry Townsend</string>
    <string name="profile_add_profile">Add Profile</string>
    <string name="movies_tv_shows">TV Shows</string>
    <string name="movies_movies">Movies</string>
    <string name="movies_my_list">My List</string>
    <string name="movie_my_list">My List</string>
    <string name="movie_malignant">Malignant</string>
    <string name="movies_best_horror_movie_of_the_year">Best horror movie of the year!</string>
    <string name="movies_play">Play</string>
    <string name="movies_info">info</string>
    <string name="movies_scream_antology">Scream Antology</string>
    <string name="movies_scream">Scream</string>
    <string name="movies_scream_2">Scream 2</string>
    <string name="movies_scream_4">Scream 4</string>
    <string name="movies_scream_3">Scream 3</string>
    <string name="info_malignant_2021">Malignant 2021</string>
    <string name="info_description">Description</string>
    <string name="info_description_details">Madison is paralyzed by shocking visions of grisly murders, and her torment worsens as she discovers that these waking dreams are in fact terrifying realities.</string>
    <string name="info_cast_annabelle_wallis_maddie_hasson_george_young">Cast: Annabelle Wallis, Maddie Hasson, George Young.</string>
    <string name="info_director_james_wan_saw_2004_insidious_2010">Director - James Wan (Saw 2004, Insidious 2010)</string>
    <string name="info_screenshots">Screenshots:</string>
    <string name="scream_1_scream_1996">Scream 1996</string>
    <string name="scream_1_description">Description:</string>
    <string name="scream_1_cast_neve_capmpbell_drew_barrymore_courtney_cox">Cast: Neve Capmpbell, Drew Barrymore, Courtney Cox</string>
    <string name="scream_1_back">Back</string>
    <string name="movies_scream">Scream</string>
    <string name="scream2_scream_2_1997">Scream 2 (1997)</string>
    <string name="scream2_cast_neve_campbell_cortney_cox_david_arquette">Cast - Neve Campbell, Cortney Cox, David Arquette</string>
    <string name="scream2_screenshots">Screenshots</string>
    <string name="scream3_scream_3_2000">Scream 3 (2000)</string>
    <string name="scream3_cast_neve_campbell_courtney_cox_david_arquette">Cast - Neve Campbell, Courtney Cox, David Arquette</string>
    <string name="scream3_director_wes_craven">Director - Wes Craven</string>
    <string name="scream3_screenshots">Screenshots:</string>
    <string name="scream_scream_4_2011">Scream 4 (2011)</string>
    <string name="scream4_description_en_years_have_passed_and_sidney_prescott_who_has_put_herself_back_together_thanks_in_part_to_her_writing_is_visited_by_the_ghostface_killer">Description - en years have passed, and Sidney Prescott, who has put herself back together thanks in part to her writing, is visited by the Ghostface Killer.</string>
    <string name="scream4_director_wes_craven">Director - Wes Craven</string>
    <string name="description_two_years_after_the_first_series_of_murders_as_sidney_acclimates_to_college_life_someone_donning_the_ghostface_costume_begins_a_new_string_of_killings">Description - Two years after the first series of murders, as Sidney acclimates to college life, someone donning the Ghostface costume begins a new string of killings.</string>
    <string name="director_wes_craven">Director - Wes Craven</string>
    <string name="description_while_sidney_and_her_friends_visit_the_hollywood_set_of_stab_3_the_third_film_based_on_the_woodsboro_murders_another_ghostface_killer_rises_to_terrorize_them">Description - While Sidney and her friends visit the Hollywood set of Stab 3, the third film based on the Woodsboro murders, another Ghostface killer rises to terrorize them.</string>
    <string name="poster">Poster</string>
    <string name="screenshot1">Screenshot1</string>
    <string name="screenshot2">Screenshot2</string>
    <string name="poster_malignant">Poster Malignant</string>
    <string name="malignant_screenshot">Malignant_Screenshot</string>
    <string name="malignant_screenshot_2">Malignant_screenshot_2</string>
    <string name="malignant_poster2">Malignant poster2</string>
    <string name="notnetflix_logo">Notnetflix logo</string>
    <string name="plus">Plus</string>
    <string name="info">Info</string>
    <string name="scream1poster">Scream1poster</string>
    <string name="scream2poster">Scream2poster</string>
    <string name="scream3poster">Scream3poster</string>
    <string name="scream4poster">Scream4poster</string>
    <string name="notnetflix">NOTNETFLIX</string>
    <string name="profilescreen">ProfileScreen</string>
    <string name="pencil_editor">Pencil editor</string>
    <string name="add_profile">add_profile</string>
    <string name="scream1_poster">Scream1_poster</string>
    <string name="a_year_after_the_murder_of_her_mother_a_teenage_girl_is_terrorized_by_a_new_killer_who_targets_the_girl_and_her_friends_by_using_horror_films_as_part_of_a_deadly_game">A year after the murder of her mother, a teenage girl is terrorized by a new killer, who targets the girl and her friends by using horror films as part of a deadly game.</string>
    <string name="director_wes_craven">Director - Wes Craven</string>
    <string name="screenshots">Screenshots:</string>
    <string name="scream_screenshot">Scream screenshot</string>
    <string name="screenshot2">Screenshot2</string>
    <string name="scream_poster2">Scream_poster2</string>
    <string name="scream2_screen">Scream2_screen</string>
    <string name="scream2_screenshotic">scream2_screenshotic</string>
    <string name="scream4poster">Scream4poster</string>
    <string name="cast_neve_campbell_courtney_cox_david_arquette">Cast - Neve Campbell, Courtney Cox, David Arquette</string>
    <string name="screenshotsscream">Screenshots</string>
    <string name="scream4_screenshot2">Scream4_screenshot2</string>
    <string name="scream4_screenshot1">scream4_screenshot1</string>
    <string name="the_thing_poster">The thing poster</string>
    <string name="the_thing_name">The thing</string>
    <string name="clssic">Clssic!</string>
    <string name="a_research_team_in_antarctica_is_hunted_by_a_shape_shifting_alien_that_assumes_the_appearance_of_its_victims">A research team in Antarctica is hunted by a shape-shifting alien that assumes the appearance of its victims.</string>
    <string name="the_thing">The thing</string>
    <string name="cast_kurt_russel_wilford_brimley_keith_david">Cast - Kurt Russel, Wilford Brimley, Keith David.</string>
    <string name="director_john_carpenter_christine_1983_halloween_1978">Director - John Carpenter (Christine 1983, Halloween 1978)</string>
    <string name="the_thing_poster">The thing poster</string>
    <string name="the_thing_sceenshot">The thing sceenshot</string>
    <string name="the_thing_screenshot">The thing screenshot</string>
</resources>